added example partials

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,6 @@
 @import "partials/variables";
 @import "partials/base";
-@import "partials/animations";
+@import "partials/e1";
+@import "partials/e2";
+@import "partials/e3";
+@import "partials/e4";
