--- a/src/scss/partials/_base.scss
+++ b/src/scss/partials/_base.scss
@@ -1,33 +1,91 @@
+@import url(http://fonts.googleapis.com/css?family=Roboto:300,400);
+
 html {
   height: 100%;
+  font-size: 100%;
   -webkit-touch-callout: none;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 body {
-  background-color: #f5f6f7;
-  font-size: 100%;
+  background-color: #f5f5f5;
   color: #333;
-  font-family: Arial, sans-serif;
+  font-family: Roboto, Arial, sans-serif;
   font-weight: 300;
+  line-height: 1.5;
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
 }
+
+h1,h2,h3,h4 {
+  margin-top: 0;
+  font-weight: 300;
+}
+
+b, strong { font-weight: 400; }
 
 .scrollable {
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
 }
 
-.boots {
+.angular-logo {
+  display: block;
   width: 100px;
-  height: 100px;
-  background-color: green;
-  opacity: 0;
+  height: 106px;
+  margin: 0 auto;
+  padding: 1.5rem;
 }
 
-.shoes {
-  width: 200px;
-  height: 200px;
-  background-color: orange;
+.nav {
+  margin: 0 auto 2rem;
+  padding: 0;
+  list-style: none;
+  text-align: center;
+  width: 15.5rem;
+  height: 50px;
+
+  li {
+    display: table;
+    float: left;
+    margin-right: 1rem;
+
+    &:last-child { margin-right: 0; }
+
+    a {
+      display: table-cell;
+      vertical-align: middle;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      text-decoration: none;
+      font-weight: 400;
+      color: #666;
+      transition: background-color .3s;
+
+      &:hover {
+        color: black;
+        background-color: #e5e5e5;
+      }
+      &.on {
+        color: black;
+        background-color: white;
+      }
+    }
+  }
 }
+
+.container {
+  position: relative;
+  margin: 0 auto;
+  padding: 1rem;
+  min-height: 450px;
+  max-width: 600px;
+  perspective: 1000px;
+
+  article { margin-bottom: 3rem; }
+}
+
+.tl { text-align: left; }
+.tc { text-align: center; }
+.tr { text-align: right; }
