linked setup and helpers

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,7 @@
 @import "partials/variables";
 @import "partials/base";
+@import "partials/setup";
+@import "partials/helpers";
 @import "partials/e1";
 @import "partials/e2";
 @import "partials/e3";
