--- a/src/scss/partials/_base.scss
+++ b/src/scss/partials/_base.scss
@@ -1,19 +1,25 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:300,400);
 
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
 html {
-  height: 100%;
   font-size: 100%;
   -webkit-touch-callout: none;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-overflow-scrolling: touch;
 }
 
 body {
-  background-color: #f5f5f5;
   color: #333;
   font-family: Roboto, Arial, sans-serif;
   font-weight: 300;
   line-height: 1.5;
   overflow-x: hidden;
+  min-width: 320px;
   -webkit-font-smoothing: antialiased;
 }
 
@@ -22,70 +28,28 @@ h1,h2,h3,h4 {
   font-weight: 300;
 }
 
-b, strong { font-weight: 400; }
-
-.scrollable {
-  overflow-x: hidden;
-  -webkit-overflow-scrolling: touch;
+b, strong {
+  font-weight: 400;
 }
 
-.angular-logo {
-  display: block;
-  width: 100px;
-  height: 106px;
-  margin: 0 auto;
-  padding: 1.5rem;
-}
+a {
+  color: #3366CC;
 
-.nav {
-  margin: 0 auto 2rem;
-  padding: 0;
-  list-style: none;
-  text-align: center;
-  width: 15.5rem;
-  height: 50px;
-
-  li {
-    display: table;
-    float: left;
-    margin-right: 1rem;
-
-    &:last-child { margin-right: 0; }
-
-    a {
-      display: table-cell;
-      vertical-align: middle;
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      text-decoration: none;
-      font-weight: 400;
-      color: #666;
-      transition: background-color .3s;
-
-      &:hover {
-        color: black;
-        background-color: #e5e5e5;
-      }
-      &.on {
-        color: black;
-        background-color: white;
-      }
-    }
+  &:hover {
+    color: #7093db;
   }
 }
 
-.container {
-  position: relative;
-  margin: 0 auto;
-  padding: 1rem;
-  min-height: 450px;
-  max-width: 600px;
-  perspective: 1000px;
+button {
+  padding: .5rem 1rem;
+  background-color: #DD1B16;
+  color: white;
+  border: none;
+  border-radius: .25rem;
+  outline: 0;
+  transition: background-color .15s;
 
-  article { margin-bottom: 3rem; }
+  &:hover {
+    background-color: #e34844;
+  }
 }
-
-.tl { text-align: left; }
-.tc { text-align: center; }
-.tr { text-align: right; }
