--- a/src/scss/partials/_e3.scss
+++ b/src/scss/partials/_e3.scss
@@ -2,21 +2,29 @@
    Exercise 3
    ========================================================================== */
 
+input {
+  padding: .5rem;
+  border: 1px solid rgba(0,0,0,.15);
+  border-radius: .25rem;
+  outline: none;
+}
 
+.listview {
+  list-style: none;
+  max-width: 280px;
+  padding-left: 0;
 
+  li {
+    border-bottom: 1px solid rgba(0,0,0,.08);
 
-
-
-
-
-
-
-
-
-
-
-
-
+    a {
+      display: block;
+      padding: .5rem;
+      color: #333;
+      text-decoration: none;
+    }
+  }
+}
 
 
 
@@ -25,3 +33,20 @@
 /* Animations
    ========================================================================== */
 
+.fade-in-ani {
+  animation: fadeInAni .2s;
+
+  &-remove {
+    animation: fadeOutAni .2s;
+  }
+}
+
+@keyframes fadeInAni {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+@keyframes fadeOutAni {
+  from { opacity: 1; }
+  to { opacity: 0; }
+}
