added grid helpers

--- a/src/scss/partials/_helpers.scss
+++ b/src/scss/partials/_helpers.scss
@@ -6,3 +6,119 @@
 .tl { text-align: left; }
 .tc { text-align: center; }
 .tr { text-align: right; }
+
+.grid {
+  display: block;
+  padding: 0;
+  margin: 0;
+  text-align: left;
+  letter-spacing: -0.31em;
+  text-rendering: optimizespeed;
+}
+.grid--center {
+  text-align: center;
+}
+.grid-cell {
+  width: 100%;
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  vertical-align: top;
+  text-align: left;
+  letter-spacing: normal;
+  word-spacing: normal;
+  text-rendering: auto;
+}
+.grid-cell--center, .center {
+  display: block;
+  margin: 0 auto;
+}
+.size-1of12 {
+  width: 8.333%;
+}
+.size-1of10 {
+  width: 10%;
+}
+.size-1of8 {
+  width: 12.5%;
+}
+.size-1of6,
+.size-2of12 {
+  width: 16.667%;
+}
+.size-1of5,
+.size-2of10 {
+  width: 20%;
+}
+.size-1of4,
+.size-2of8,
+.size-3of12 {
+  width: 25%;
+}
+.size-3of10 {
+  width: 30%;
+}
+.size-1of3,
+.size-2of6,
+.size-3of9,
+.size-4of12 {
+  width: 33.333%;
+}
+.size-3of8 {
+  width: 37.5%;
+}
+.size-2of5,
+.size-4of10 {
+  width: 40%;
+}
+.size-5of12 {
+  width: 41.667%;
+}
+.size-1of2,
+.size-2of4,
+.size-3of6,
+.size-4of8,
+.size-5of10,
+.size-6of12 {
+  width: 50%;
+}
+.size-7of12 {
+  width: 58.333%;
+}
+.size-3of5,
+.size-6of10 {
+  width: 60%;
+}
+.size-5of8 {
+  width: 62.5%;
+}
+.size-2of3,
+.size-4of6,
+.size-8of12 {
+  width: 66.667%;
+}
+.size-7of10 {
+  width: 70%;
+}
+.size-3of4,
+.size-6of8,
+.size-9of12 {
+  width: 75%;
+}
+.size-4of5,
+.size-8of10 {
+  width: 80%;
+}
+.size-5of6,
+.size-10of12 {
+  width: 83.333%;
+}
+.size-7of8 {
+  width: 87.5%;
+}
+.size-9of10 {
+  width: 90%;
+}
+.size-11of12 {
+  width: 91.667%;
+}
