--- a/src/scss/partials/_e4.scss
+++ b/src/scss/partials/_e4.scss
@@ -2,22 +2,56 @@
    Exercise 4
    ========================================================================== */
 
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  padding: 1rem;
+  min-width: 280px;
+  min-width: 400px;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border-radius: .25rem;
+  z-index: 3;
 
+  h2 { margin: 0; }
 
+  p { margin-top: 0; }
 
+  .link-close {
+    position: absolute;
+    top: .5rem;
+    right: 1rem;
+    text-decoration: none;
+  }
 
+  textarea {
+    display: block;
+    width: 100%;
+    height: 100px;
+    margin-bottom: 1rem;
+    padding: .5rem;
+    border: 1px solid rgba(0,0,0,.15);
+    border-radius: .25rem;
+    outline: none;
+    resize: none;
+  }
+}
 
+.overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0,0,0,.3);
+  z-index: 2;
+}
 
+.feedback-done {
 
-
-
-
-
-
-
-
-
-
+  h1 { margin: 2rem 0 0; }
+}
 
 
 
