--- a/src/scss/partials/_e1.scss
+++ b/src/scss/partials/_e1.scss
@@ -36,16 +36,20 @@
 @keyframes fadeIn {
   from {
     opacity: 0;
+    transform: translate(0,0) scale(2) rotate(0);
   }
   to {
     opacity: 1;
+    transform: translate(0,0) scale(1) rotate(0);
   }
 }
 @keyframes fadeOut {
   from {
     opacity: 1;
+    transform: translate(0,0) scale(1) rotate(0);
   }
   to {
     opacity: 0;
+    transform: translate(150px,0) scale(.5) rotate(90deg);
   }
 }
