--- a/src/scss/partials/_e1.scss
+++ b/src/scss/partials/_e1.scss
@@ -25,7 +25,7 @@
 /* Animations
    ========================================================================== */
 
-.fade-in-ani {
+.fade-in-box-ani {
   animation: fadeIn .3s forwards;
 
   &-remove {
