--- a/src/scss/partials/_e3.scss
+++ b/src/scss/partials/_e3.scss
@@ -33,20 +33,20 @@ input {
 /* Animations
    ========================================================================== */
 
-.fade-in-ani {
-  animation: fadeInAni .2s;
+.fade-in-result-ani {
+  animation: fadeInResultAni .2s;
 
   &-remove {
-    animation: fadeOutAni .2s;
+    animation: fadeOutResultAni .2s;
   }
 }
 
-@keyframes fadeInAni {
+@keyframes fadeInResultAni {
   from { opacity: 0; }
   to { opacity: 1; }
 }
 
-@keyframes fadeOutAni {
+@keyframes fadeOutResultAni {
   from { opacity: 1; }
   to { opacity: 0; }
 }
